minor cleanup to notebook code

--- a/notebooks/extract-records.ipynb
+++ b/notebooks/extract-records.ipynb
@@ -94,13 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# will contain collected records extracted from text\n",
     "records = []\n",
+    "\n",
+    "# initialize dept variable\n",
     "dept = None\n",
+    "\n",
+    "# iterate through lines of text\n",
     "for line in lines:\n",
+    "    \n",
     "    # Look for a department match\n",
     "    dept_match = re.match(dept_regex, line, re.MULTILINE)\n",
     "    if dept_match: \n",
@@ -168,12 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import textdistance as td\n",
-    "\n",
     "# list of state abbreviations\n",
     "state_abbrevs = [\"AK\",\"AL\",\"AZ\",\"AR\",\"CA\",\"CO\",\"CT\",\"DE\",\"FL\",\"GA\",\"HI\",\"ID\",\"IL\",\"IN\",\"IA\",\"KS\",\"KY\",\"LA\",\"ME\",\"MD\",\"MA\",\"MI\",\"MN\",\"MS\",\"MO\",\"MT\",\"NE\",\"NV\",\"NH\",\"NJ\",\"NM\",\"NY\",\"NC\",\"ND\",\"OH\",\"\\\n",
     "OK\",\"OR\",\"PA\",\"RI\",\"SC\",\"SD\",\"TN\",\"TX\",\"UT\",\"VT\",\"VA\",\"WA\",\"WV\",\"WI\",\"WY\"]\n",
@@ -198,13 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import textdistance as td\n",
+    "\n",
+    "# use the textdistance package to get closest match\n",
     "for rec in records:\n",
     "    if rec.state:\n",
-    "        state = rec.state\n",
     "        l = [td.levenshtein(s, rec.state) for s in state_keys]\n",
     "        rec.state = states[state_keys[l.index(min(l))]]"
    ]
@@ -218,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +343,7 @@
        "4                 Disbursing clerk  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +360,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fdabb855860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f14121a3128>"
       ]
      },
      "execution_count": 12,
@@ -387,7 +393,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fdab9760518>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f14100b3828>"
       ]
      },
      "execution_count": 13,
@@ -443,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,9 +488,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GOVERNMENT PRINTING OFFICE (13, 16)\n",
+      "LIBRARY OF CONGRESS (449, 452)\n",
+      "UNITED STATES BOTANIC GARDEN (1113, 1117)\n"
+     ]
+    }
+   ],
    "source": [
     "matcher = Matcher(nlp.vocab)\n",
     "pattern = [{'IS_UPPER': True, 'IS_ALPHA': True, 'OP': '+'}, \n",
@@ -509,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,16 +534,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HISTORY:\n",
+      "TRAUMA, ASSESS FOR HEMORRHAGE\n",
+      "REPORT\n",
+      "HISTORY: As above.\n",
+      "COMPARISON: No relevant prior examinations available.\n",
+      "TECHNIQUE: Head CT without contrast.\n",
+      "FINDINGS:\n",
+      "There is a predominantly hyperdense extra axial collection layering over the left cerebral\n",
+      "convexity and left tentorium, consistent with a subdural hematoma. The component overlying the\n",
+      "left cerebral convexity measures 11-mm and the tentorial component measures 15-mm.\n",
+      "There is associated mass effect with effacement of the adjacent left cerebral sulci and left lateral\n",
+      "ventricle and 6-mm of rightward midline shift. There is mild subfalcine herniation. There is no\n",
+      "uncal herniation. There is also a small amount of subdural hemorrhage along the falx and right\n",
+      "tentorium.\n",
+      "There is hypodensity in the periventricular and subcortical white matter, a nonspecific finding\n",
+      "that is often seen in patients with microangiopathic changes. The brain parenchyma is otherwise\n",
+      "unremarkable. There is no evidence of intracranial mass lesion, acute infarction.\n",
+      "There is scattered mucosal thickening of the paranasal sinuses. The bilateral mastoid air cells are\n",
+      "well aerated and clear. A prosthesis is noted in the right globe.\n",
+      "There is a large posterior subgaleal hematoma. No fracture is identified.\n",
+      "IMPRESSION:\n",
+      "Predominantly hyperdense subdural hematoma layering over the left cerebral convexity and left\n",
+      "tentorium, measuring up to 15 mm in greatest diameter. There is also a small amount of\n",
+      "subdural hemorrhage along the right tentorium and the falx. There is associated mass effect with\n",
+      "6-mm of rightward midline shift and mild subfalcine herniation.\n",
+      "Nonspecific white matter hypoattenuation, likely representing microangiopathic changes.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(radiology_text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,9 +586,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[SENT]: HISTORY:\n",
+      "TRAUMA, ASSESS FOR HEMORRHAGE\n",
+      "REPORT\n",
+      "HISTORY:\n",
+      "[SENT]: As above.\n",
+      "\n",
+      "[SENT]: COMPARISON:\n",
+      "[SENT]: No relevant prior examinations available.\n",
+      "\n",
+      "[SENT]: TECHNIQUE: Head CT without contrast.\n",
+      "\n",
+      "[SENT]: FINDINGS:\n",
+      "\n",
+      "[SENT]: There is a predominantly hyperdense extra axial collection layering over the left cerebral\n",
+      "convexity and left tentorium, consistent with a subdural hematoma.\n",
+      "[SENT]: The component overlying the\n",
+      "left cerebral convexity measures 11-mm and the tentorial component measures 15-mm.\n",
+      "\n",
+      "[SENT]: There is associated mass effect with effacement of the adjacent left cerebral sulci and left lateral\n",
+      "ventricle and 6-mm of rightward midline shift.\n",
+      "[SENT]: There is mild subfalcine herniation.\n",
+      "[SENT]: There is no\n",
+      "uncal herniation.\n",
+      "[SENT]: There is also a small amount of subdural hemorrhage along the falx and right\n",
+      "tentorium.\n",
+      "\n",
+      "[SENT]: There is hypodensity in the periventricular and subcortical white matter, a nonspecific finding\n",
+      "that is often seen in patients with microangiopathic changes.\n",
+      "[SENT]: The brain parenchyma is otherwise\n",
+      "unremarkable.\n",
+      "[SENT]: There is no evidence of intracranial mass lesion, acute infarction.\n",
+      "\n",
+      "[SENT]: There is scattered mucosal thickening of the paranasal sinuses.\n",
+      "[SENT]: The bilateral mastoid air cells are\n",
+      "well aerated and clear.\n",
+      "[SENT]: A prosthesis is noted in the right globe.\n",
+      "\n",
+      "[SENT]: There is a large posterior subgaleal hematoma.\n",
+      "[SENT]: No fracture is identified.\n",
+      "\n",
+      "[SENT]: IMPRESSION:\n",
+      "\n",
+      "[SENT]: Predominantly hyperdense subdural hematoma layering over the left cerebral convexity and left\n",
+      "tentorium, measuring up to 15 mm in greatest diameter.\n",
+      "[SENT]: There is also a small amount of\n",
+      "subdural hemorrhage along the right tentorium and the falx.\n",
+      "[SENT]: There is associated mass effect with\n",
+      "6-mm of rightward midline shift and mild subfalcine herniation.\n",
+      "\n",
+      "[SENT]: Nonspecific white matter hypoattenuation, likely representing microangiopathic changes.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "sents = list(radiology_doc.sents)\n",
     "for sent in sents:\n",
@@ -547,9 +655,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HISTORY\n",
+      "TRAUMA\n",
+      "HEMORRHAGE\n",
+      "REPORT\n",
+      "COMPARISON\n",
+      "No relevant prior examinations\n",
+      "TECHNIQUE\n",
+      "Head CT\n",
+      "contrast\n",
+      "FINDINGS\n",
+      "a predominantly hyperdense extra axial collection\n",
+      "the left cerebral\n",
+      "convexity and left tentorium\n",
+      "a subdural hematoma\n",
+      "The component\n",
+      "cerebral convexity measures\n",
+      "associated mass effect\n",
+      "effacement\n",
+      "lateral\n",
+      "ventricle\n",
+      "rightward midline shift\n",
+      "mild subfalcine herniation\n",
+      "no\n",
+      "uncal herniation\n",
+      "a small amount\n",
+      "subdural hemorrhage\n",
+      "the falx\n",
+      "tentorium\n",
+      "hypodensity\n",
+      "the periventricular and subcortical white matter\n",
+      "a nonspecific finding\n",
+      "patients\n",
+      "microangiopathic changes\n",
+      "The brain parenchyma\n",
+      "no evidence\n",
+      "intracranial mass lesion\n",
+      "acute infarction\n",
+      "scattered mucosal thickening\n",
+      "the paranasal sinuses\n",
+      "The bilateral mastoid air cells\n",
+      "A prosthesis\n",
+      "the right globe\n",
+      "a large posterior subgaleal hematoma\n",
+      "No fracture\n",
+      "IMPRESSION\n",
+      "Predominantly hyperdense\n",
+      "subdural hematoma\n",
+      "the left cerebral convexity\n",
+      "up to 15 mm\n",
+      "greatest diameter\n",
+      "a small amount\n",
+      "subdural hemorrhage\n",
+      "the right tentorium\n",
+      "the falx\n",
+      "associated mass effect\n",
+      "rightward midline shift\n",
+      "mild subfalcine herniation\n",
+      "Nonspecific white matter hypoattenuation\n",
+      "microangiopathic changes\n"
+     ]
+    }
+   ],
    "source": [
     "for nc in radiology_doc.noun_chunks:\n",
     "    print(nc)"
@@ -557,9 +731,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is mild subfalcine herniation.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" id=\"66-0\" class=\"displacy\" width=\"925\" height=\"399.5\" style=\"max-width: none; height: 399.5px; color: #000000; background: #ffffff; font-family: Arial\">\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"50\">There</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"50\">ADV</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"225\">is</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"225\">VERB</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"400\">mild</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"400\">ADJ</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"575\">subfalcine</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"575\">NOUN</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<text class=\"displacy-token\" fill=\"currentColor\" text-anchor=\"middle\" y=\"309.5\">\n",
+       "    <tspan class=\"displacy-word\" fill=\"currentColor\" x=\"750\">herniation.</tspan>\n",
+       "    <tspan class=\"displacy-tag\" dy=\"2em\" fill=\"currentColor\" x=\"750\">NOUN</tspan>\n",
+       "</text>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-66-0-0\" stroke-width=\"2px\" d=\"M70,264.5 C70,177.0 215.0,177.0 215.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-66-0-0\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">expl</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M70,266.5 L62,254.5 78,254.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-66-0-1\" stroke-width=\"2px\" d=\"M420,264.5 C420,89.5 745.0,89.5 745.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-66-0-1\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M420,266.5 L412,254.5 428,254.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-66-0-2\" stroke-width=\"2px\" d=\"M595,264.5 C595,177.0 740.0,177.0 740.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-66-0-2\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">amod</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M595,266.5 L587,254.5 603,254.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "\n",
+       "<g class=\"displacy-arrow\">\n",
+       "    <path class=\"displacy-arc\" id=\"arrow-66-0-3\" stroke-width=\"2px\" d=\"M245,264.5 C245,2.0 750.0,2.0 750.0,264.5\" fill=\"none\" stroke=\"currentColor\"/>\n",
+       "    <text dy=\"1.25em\" style=\"font-size: 0.8em; letter-spacing: 1px\">\n",
+       "        <textPath xlink:href=\"#arrow-66-0-3\" class=\"displacy-label\" startOffset=\"50%\" fill=\"currentColor\" text-anchor=\"middle\">attr</textPath>\n",
+       "    </text>\n",
+       "    <path class=\"displacy-arrowhead\" d=\"M750.0,266.5 L758.0,254.5 742.0,254.5\" fill=\"currentColor\"/>\n",
+       "</g>\n",
+       "</svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print(sents[9])\n",
     "displacy.render(sents[9], style='dep', jupyter=True)"
