added directive for pdflatex

--- a/slides.tex
+++ b/slides.tex
@@ -1,5 +1,5 @@
 %------------------------------------------------------------------------------
-% Document Header
+% !TEX program = pdflatex
 %------------------------------------------------------------------------------
 \documentclass[10pt]{beamer}
 
